# article-bot

./: pyproject.toml
article_bot/: main.py
article_bots/: README.md  pyproject.toml
article_bots/src/article_bots/: crew.py  main.py
blogs/: Canadian election 2025.md  Dota 2, League of Legends.md  L'épicurisme - 50% épicure, 50% malaria.md  Trump, Tarrifs, Pandas.md
