[project]
name = "article_bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Stéphane Burwash",email = "sburwash@live.ca"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai (>=0.108.0,<0.109.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
