[project]
name = "article_bots"
version = "0.1.0"
description = "article-bots using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
article_bots = "article_bots.main:run"
run_crew = "article_bots.main:run"
train = "article_bots.main:train"
replay = "article_bots.main:replay"
test = "article_bots.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
